prisma, begin edge functions

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 SUPABASE_URL=project url
+SUPABASE_PROJECT_REF=the ref part of project url
 SUPABASE_DB_URI=connection string from settings/database
 SUPABASE_PASS=password from the project setup
+SUPABASE_ACCESS_TOKEN=access token from account/tokens
 SUPABASE_API_PUBLIC=anon api key from the settings/api
 SUPABASE_API_ADMIN=service api key from the settings/api
 PRISMA_DB_URI=connection string from prisma data proxy
