--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
   "tasks": {
-    "start": "deno run -A --watch=static/,routes/ dev.ts"
+    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "updatesecrets": "deno run -A updateSupabaseSecrets.ts",
+    "testfunction": "deno run -A testFunction.ts"
   },
   "importMap": "./import_map.json",
   "compilerOptions": {
